# maimap-backend

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: main.yml
crates/maimap-derive/: Cargo.toml
crates/maimap-derive/src/: lib.rs
crates/maimap-scrape/: Cargo.toml
crates/maimap-scrape/src/: cleanup.rs  export_hashmap.rs  geo_location.rs  main.rs
crates/maimap-server/: Cargo.toml
crates/maimap-server/src/: lib.rs  main.rs  res.rs  router.rs
crates/maimap-server/src/handler/: common.rs  mod.rs
crates/maimap-server/src/handler/arcade/: get_by_id.rs  get_comments.rs  get_tags.rs  mod.rs  search.rs
crates/maimap-server/tests/: arcade_api.rs  env.rs  types.rs
crates/maimap-utils/: Cargo.toml
crates/maimap-utils/src/: backup.rs  db.rs  env.rs  errors.rs  lib.rs  traits.rs  types.rs
src/: backup.rs  db.rs  env.rs  errors.rs  handler.rs  lib.rs  maimap_handler.rs  main.rs  res.rs  scrape.rs  types.rs
src/handler/: common.rs
src/handler/arcade/: get_by_id.rs  get_comments.rs  mod.rs  search.rs
tests/: arcade_api.rs  types.rs
