[package]
name = "maimap-backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["server"]

[[bin]]
name = "scrape"
path = "src/bin/scrape.rs"
required-features = ["scrape"]

[[bin]]
name = "chrome-installer"
path = "src/bin/chrome_installer.rs"
required-features = ["chrome-installer"]

[features]
default = []
server = ["salvo", "mongodb"]
scrape = ["headless_chrome", "scraper", "mongodb", "reqwest"]
chrome-installer = ["headless_chrome"]

[dependencies]
salvo = { version = "0.77", optional = true }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = { version = "3", optional = true }
dotenv = "0.15.0"
headless_chrome = { version = "1.0", features = ["fetch"], optional = true }
scraper = { version = "0.23", optional = true }
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }