[workspace]
members = [
    "crates/*"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["MoonFeather <moonfeather120@outlook.com>"]
edition = "2024"
description = """
MaiMap's backend program.
"""
repository = "https://github.com/120MF/maimap-backend"
readme = "./README.md"
license = "MIT"

[workspace.dependencies]
maimap-derive = { path = "crates/maimap-derive" }
maimap-server = { path = "crates/maimap-server" }
maimap-scrape = { path = "crates/maimap-scrape" }
maimap-utils = { path = "crates/maimap-utils" }

tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.44", features = ["macros", "test-util"] }

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "deny"