[package]
name = "maimap-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[[test]]
name = "server-arcade-api-test"
path = "tests/arcade_api.rs"

[dependencies]
maimap-utils = { workspace = true }
salvo = { version = "0.78", features = ["test", "cors"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }